--- a/frontend/src/Pages/Mathematik/Klasse1/zahleneinführung.css
+++ b/frontend/src/Pages/Mathematik/Klasse1/zahleneinführung.css
@@ -54,7 +54,7 @@
 
 footer {
   background-color: #4682b4; /* Hintergrundfarbe für den Footer */
-  color: white;
+  color: rgb(255, 255, 255);
   text-align: center;
   padding: 1rem;
   margin-top: 2rem;
@@ -93,4 +93,8 @@ footer {
 
 .number-item:nth-child(even) {
   background-color: #47b5da; /* dunklere Farbe für gerade Elemente */
+}
+
+.center-text {
+  text-align: center;
 }
