--- a/frontend/src/Pages/Mathematik/Klasse1/addition-subtraktion.css
+++ b/frontend/src/Pages/Mathematik/Klasse1/addition-subtraktion.css
@@ -17,7 +17,7 @@
   width: 100%;
   height: auto;
   opacity: 0.1;
-  z-index: -1;
+  z-index: 2;
 }
 
 .introduction, .task {
@@ -42,26 +42,26 @@
 .image-gallery {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 5px;
   justify-content: center;
 }
 
 .image-card {
   background-color: #5339e4;
-  padding: 40px;
+  padding: 10px;
   border: 1px solid #2942ce;
-  border-radius: 5px;
+  border-radius: 1px;
   text-align: center;
 }
 
 .image-card img {
-  max-width: 75%;
-  height: auto;
+  max-width: 65%;
+  height: calc(center);
 }
 
 footer {
   background-color: #1274d5;
   text-align: center;
-  padding: 10px;
-  border-top: 2px solid #08427c;
+  padding: 5px;
+  border-top: 1px solid #08427c;
 }
