--- a/frontend/src/Pages/Mathematik/Klasse1/addition-subtraktion.css
+++ b/frontend/src/Pages/Mathematik/Klasse1/addition-subtraktion.css
@@ -49,7 +49,7 @@
 .image-card {
   background-color: #5339e4;
   padding: 10px;
-  border: 1px solid #2942ce;
+  border: 1px solid #5233b7;
   border-radius: 1px;
   text-align: center;
 }
@@ -60,8 +60,8 @@
 }
 
 footer {
-  background-color: #1274d5;
+  background-color: #3a0c90;
   text-align: center;
   padding: 5px;
-  border-top: 1px solid #08427c;
+  border-top: 1px solid #3316c3;
 }
