--- a/frontend/src/Pages/Mathematik/Klasse1/zahleneinführung.css
+++ b/frontend/src/Pages/Mathematik/Klasse1/zahleneinführung.css
@@ -28,15 +28,17 @@
 .image-gallery {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 20px; /* Abstand zwischen Bildkarten */
 }
 
 .image-card {
+  flex: 1 1 calc(33.333% - 20px);
+  box-sizing: border-box;
+  margin-bottom: 20px;
   background-color: #fff; /* Hintergrundfarbe für jede Bildkarte */
   border: 1px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
-  width: calc(50% - 1rem);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -59,40 +61,26 @@ footer {
   padding: 1rem;
   margin-top: 2rem;
 }
+
 .numbers-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
-}
-
-
-.image-gallery {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-
-.image-card {
-  flex: 1 1 calc(33.333% - 20px);
-  box-sizing: border-box;
-  margin-bottom: 20px;
-}
-
-.video-container {
-  margin-bottom: 20px;
+  gap: 10px; /* Abstand zwischen Zahlen */
 }
 
 .number-item {
   padding: 10px;
   border: 1px solid #ccc;
+  text-align: center;
+  font-size: 1.2em; /* Schriftgröße für Zahlen-Items */
 }
 
 .number-item:nth-child(odd) {
-  background-color: #2b6ca5; /* helle Farbe für ungerade Elemente */
+  background-color: #56c925; /* helle Farbe für ungerade Elemente */
 }
 
 .number-item:nth-child(even) {
-  background-color: #47b5da; /* dunklere Farbe für gerade Elemente */
+  background-color: #7648ca; /* dunklere Farbe für gerade Elemente */
 }
 
 .center-text {
