--- a/frontend/src/Pages/Mathematik/Klasse1/formenmuster.css
+++ b/frontend/src/Pages/Mathematik/Klasse1/formenmuster.css
@@ -24,7 +24,7 @@ body {
 }
 
 .introduction {
-  background-color: #ffeb3b;
+  background-color: #ffeb3b; 
   padding: 20px;
   border-radius: 8px;
   margin: 20px 0;
@@ -32,7 +32,7 @@ body {
 }
 
 .shapes, .patterns, .exercise {
-  background-color: #4caf50;
+  background-color: #d848c2;
   padding: 20px;
   border-radius: 8px;
   margin: 20px 0;
@@ -106,7 +106,7 @@ footer {
 }
 
 .video-section {
-  background-color: #4caf50;
+  background-color: #c8f620;
   padding: 20px;
   border-radius: 8px;
   margin: 20px 0;
