--- a/frontend/src/Pages/Mathematik/Klasse1/addition-subtraktion.css
+++ b/frontend/src/Pages/Mathematik/Klasse1/addition-subtraktion.css
@@ -60,8 +60,8 @@
 }
 
 footer {
-  background-color: #3a0c90;
+  background-color: #4814a9;
   text-align: center;
   padding: 5px;
-  border-top: 1px solid #3316c3;
+  border-top: 1px solid #6f5ccc;
 }
