--- a/frontend/src/Pages/Mathematik/Klasse1/zahleneinführung.css
+++ b/frontend/src/Pages/Mathematik/Klasse1/zahleneinführung.css
@@ -5,14 +5,14 @@
 }
 
 .zahleneinführung-header {
-  background-color: #4682b4; /* Hintergrundfarbe für den Header */
-  color: white;
+  background-color: #121afa; /* Hintergrundfarbe für den Header */
+  color: rgb(46, 44, 44);
   padding: 1rem;
   text-align: center;
 }
 
 #introduction {
-  background-color: #faf0e6; /* Hintergrundfarbe für den Einführungsabschnitt */
+  background-color: #ee15e7; /* Hintergrundfarbe für den Einführungsabschnitt */
   padding: 2rem;
   border-radius: 8px;
   margin: 1rem 0;
@@ -48,7 +48,7 @@
 }
 
 #number-lines {
-  background-color: #ffe4e1; /* Hintergrundfarbe für den Abschnitt Zahlenlinien */
+  background-color: #9b42c7; /* Hintergrundfarbe für den Abschnitt Zahlenlinien */
   padding: 2rem;
   border-radius: 8px;
   margin: 1rem 0;
