--- a/frontend/src/Pages/Deutsch/Klasse1/Alphabeteinführung.css
+++ b/frontend/src/Pages/Deutsch/Klasse1/Alphabeteinführung.css
@@ -1,4 +1,4 @@
-.zahleneinführung {
+.Alphabeteinführung {
   font-family: Arial, sans-serif;
   color: #333;
   background-color: #f0f8ff; /* Hintergrundfarbe für den gesamten Container */
