--- a/frontend/src/Pages/Deutsch/Klasse1/Alphabeteinführung.css
+++ b/frontend/src/Pages/Deutsch/Klasse1/Alphabeteinführung.css
@@ -6,20 +6,20 @@ body {
 }
 
 .Alphabeteinführung {
-  max-width: 1500px;
+  max-width: 1600px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 10px;
   background-color: #f90fd6;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .Alphabeteinführung-header {
-  background-color: #4caf50;
-  color: rgb(41, 30, 30);
-  padding: 20px;
+  background-color: #1638e3;
+  color: rgb(49, 219, 74);
+  padding: 30px;
   text-align: center;
-  border-radius: 10px 10px 0 0;
+  border-radius: 1px 1px 0 0;
 }
 
 .Alphabeteinführung-header h1 {
@@ -35,7 +35,7 @@ main {
 }
 
 h2 {
-  color: #4caf50;
+  color: #1d281d;
 }
 
 .alphabet-grid {
@@ -69,7 +69,7 @@ h2 {
 }
 
 .image-card {
-  background-color: #f60fea;
+  background-color: #4fa3e3;
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
