--- a/frontend/src/Pages/Deutsch/Klasse1/Woertersaetze.css
+++ b/frontend/src/Pages/Deutsch/Klasse1/Woertersaetze.css
@@ -1,63 +1,48 @@
-/* Woertersaetze.css */
+.Woertersaetze {
+  text-align: center;
+  padding: 20px;
+}
 
-/* Allgemeine Stile */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f8ff;
-    margin: 0;
-    padding: 0;
-  }
-  
-  /* Wörtersätze Container */
-  .wortersaetze {
-    text-align: center;
-    padding: 20px;
-  }
-  
-  /* Header */
-  .wortersaetze-header {
-    background-color: #4CAF50;
-    color: white;
-    padding: 20px 0;
-    margin-bottom: 20px;
-  }
-  
-  .wortersaetze-header h1 {
-    font-size: 2.5em;
-  }
-  
-  /* Hauptinhalt */
-  main {
-    padding: 20px;
-  }
-  
-  /* Abschnitt: Einführung Wörtersätze */
-  #introduction {
-    margin-bottom: 40px;
-  }
-  
-  #introduction h2 {
-    font-size: 2em;
-    color: #4CAF50;
-  }
-  
-  /* Wörtersätze Grid */
-  .wortersaetze-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-  }
-  
-  /* Wörtersätze Items */
-  .wortersaetze-item {
-    background-color: #ffffff;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 10px;
-    flex: 1 1 calc(33.333% - 20px);
-    box-sizing: border-box;
-    text-align: center;
-    margin-bottom: 10px;
-  }
-  
+/* Header */
+.Woertersaetze-header {
+  background-color: #433dbf;
+  color: #21252c;
+  padding: 20px 0;
+  margin-bottom: 20px;
+}
+
+.Woertersaetze-header h1 {
+  font-size: 2.5em;
+}
+
+/* Hauptinhalt */
+main {
+  padding: 20px;
+}
+
+/* Abschnitt: Einführung Wörtersätze */
+#introduction {
+  margin-bottom: 40px;
+}
+
+#introduction h2 {
+  font-size: 2em;
+  color: #242a25;
+}
+
+/* Wörtersätze Grid */
+.word-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 10px;
+}
+
+/* Wörtersätze Items */
+.word-item {
+  background-color: #50eb1c;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+  margin-bottom: 10px;
+}
