--- a/frontend/src/Pages/Deutsch/Klasse1/GeschichtenMaerchen.css
+++ b/frontend/src/Pages/Deutsch/Klasse1/GeschichtenMaerchen.css
@@ -101,7 +101,7 @@ main {
   margin: 20px auto;
   width: 80%;
   height: 20px;
-  background-color: #eeeeee;
+  background-color: #91f715;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
