--- a/frontend/src/Pages/Deutsch/Klasse1/Woertersaetze.css
+++ b/frontend/src/Pages/Deutsch/Klasse1/Woertersaetze.css
@@ -16,7 +16,7 @@ body {
   
   /* Header */
   .wortersaetze-header {
-    background-color: #4CAF50;
+    background-color: #5a815b;
     color: white;
     padding: 20px 0;
     margin-bottom: 20px;
