--- a/frontend/src/Components/QuestSpiel/QuestSpiel.css
+++ b/frontend/src/Components/QuestSpiel/QuestSpiel.css
@@ -9,7 +9,7 @@ body {
   max-width: 1200px; /* Increased size */
   margin: 20px auto;
   padding: 30px; /* Increased padding */
-  background-color: #f2fa0b; /* Bright background color */
+  background-color: #37fa0b; /* Bright background color */
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -67,17 +67,17 @@ input[type="number"] {
   margin: 5px;
   border: none;
   border-radius: 5px;
-  background-color: #3f51b5;
+  background-color: #0b25b7;
   color: white;
   cursor: pointer;
 }
 
 .nav-button:hover {
-  background-color: #303f9f;
+  background-color: #1935ee;
 }
 
 .progress-bar {
-  background-color: #7cecee;
+  background-color: #ebf712;
   border-radius: 5px;
   overflow: hidden;
   margin-top: 20px;
@@ -85,7 +85,7 @@ input[type="number"] {
 
 .progress {
   height: 30px; /* Increased height */
-  background-color: #4caf50;
+  background-color: #2e10f3;
 }
 
 .emoji-container {
