--- a/frontend/src/Pages/Mathematik/Klasse1/zahleneinführung.css
+++ b/frontend/src/Pages/Mathematik/Klasse1/zahleneinführung.css
@@ -12,7 +12,7 @@
 }
 
 #introduction {
-  background-color: #ee15e7; /* Hintergrundfarbe für den Einführungsabschnitt */
+  background-color: #0fd516; /* Hintergrundfarbe für den Einführungsabschnitt */
   padding: 2rem;
   border-radius: 8px;
   margin: 1rem 0;
@@ -76,7 +76,7 @@ footer {
 }
 
 .number-item:nth-child(odd) {
-  background-color: #56c925; /* helle Farbe für ungerade Elemente */
+  background-color: #c92561; /* helle Farbe für ungerade Elemente */
 }
 
 .number-item:nth-child(even) {
