--- a/frontend/src/Pages/Deutsch/Klasse1/Woertersaetze.css
+++ b/frontend/src/Pages/Deutsch/Klasse1/Woertersaetze.css
@@ -40,7 +40,7 @@ main {
 /* Wörtersätze Items */
 .word-item {
   background-color: #1c3beb;
-  border: 1px solid #ddd;
+  border: 1px solid #1e1d21;
   border-radius: 5px;
   padding: 10px;
   text-align: center;
