--- a/frontend/src/Pages/Deutsch/Klasse1/GeschichtenMaerchen.css
+++ b/frontend/src/Pages/Deutsch/Klasse1/GeschichtenMaerchen.css
@@ -1,12 +1,12 @@
 .page-container {
   font-family: Arial, sans-serif;
-  background-color: #1c19f4;
+  background-color: #872ff3;
   margin: 0;
   padding: 0;
 }
 
 header {
-  background-color: #00d1e4;
+  background-color: #fafeff;
   color: #1b1e24;
   padding: 20px 0;
   text-align: center;
