error pagine modefiziren

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: right;
   justify-content: right;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(15px + 2vmim);
   color: white;
 }
 
