--- a/frontend/src/Pages/Deutsch/Klasse1/Alphabeteinführung.css
+++ b/frontend/src/Pages/Deutsch/Klasse1/Alphabeteinführung.css
@@ -1,12 +1,3 @@
-.Alphabeteinführung {
-  max-width: 1600px;
-  margin: 0 auto;
-  padding: 10px;
-  background-color: #f82c2c;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
 .Alphabeteinführung-header {
   background-color: #1410f4;
   color: rgb(22, 21, 42);
@@ -16,11 +7,15 @@
 }
 
 .Alphabeteinführung-header h1 {
-  margin: 0;
+  margin: 4;
+
 }
 
 main {
   padding: 20px;
+  p {
+    color: #101310;
+  }
 }
 
 #introduction, #alphabet-songs, #letter-recognition-images, #videos {
@@ -28,7 +23,7 @@ main {
 }
 
 h2 {
-  color: #1d281d;
+  color: #101310;
 }
 
 .alphabet-grid {
@@ -39,7 +34,7 @@ h2 {
 }
 
 .alphabet-item {
-  background-color: #f1f8e9;
+  background-color: #e7ede9;
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -78,14 +73,8 @@ h2 {
 .image-card img {
   width: 100%;
   height: auto;
-  max-height: 100%;
+  max-height: 65%;
   border-radius: 5px;
 }
 
-footer {
-  text-align: center;
-  padding: 10px;
-  background-color: #19381a;
-  color: white;
-  border-radius: 0 0 10px 10px;
-}
+
