--- a/frontend/src/Components/Register/Register.css
+++ b/frontend/src/Components/Register/Register.css
@@ -7,7 +7,7 @@
     justify-content: center;
     height: 100vh;
     font-family: 'Roboto', sans-serif;
-    background: linear-gradient(145deg, #f0f0f0, #e0e0e0);
+    background: linear-gradient(145deg, #f0f0f0, #d67bec);
 }
 
 .register-title {
@@ -17,11 +17,11 @@
 }
 
 .register-form {
-    background: white;
+    background: rgb(234, 136, 214);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 400px;
 }
 
 .form-group {
@@ -38,17 +38,17 @@
 .form-group input {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #d7bdbd;
     border-radius: 5px;
     font-size: 1em;
 }
 
 .error-input {
-    border-color: #ff6b6b;
+    border-color: #6a0404;
 }
 
 .error-text {
-    color: #ff6b6b;
+    color: #da1a37;
     font-size: 0.9em;
     margin-top: 5px;
 }
@@ -56,8 +56,8 @@
 .register-button {
     width: 100%;
     padding: 10px;
-    background-color: #4CAF50;
-    color: white;
+    background-color: #7f1893;
+    color: rgb(245, 240, 245);
     border: none;
     border-radius: 5px;
     font-size: 1.2em;
@@ -66,5 +66,5 @@
 }
 
 .register-button:hover {
-    background-color: #45a049;
+    background-color: #270789;
 }
