farbe anpasung für register pagine

--- a/frontend/src/Components/Register/Register.css
+++ b/frontend/src/Components/Register/Register.css
@@ -7,7 +7,7 @@
     justify-content: center;
     height: 100vh;
     font-family: 'Roboto', sans-serif;
-    background: linear-gradient(145deg, #f0f0f0, #d67bec);
+    background: linear-gradient(145deg, #f0f0f0, #6a98ed);
 }
 
 .register-title {
@@ -17,7 +17,7 @@
 }
 
 .register-form {
-    background: rgb(234, 136, 214);
+    background: rgb(147, 175, 239);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
@@ -56,7 +56,7 @@
 .register-button {
     width: 100%;
     padding: 10px;
-    background-color: #7f1893;
+    background-color: #4991f5;
     color: rgb(245, 240, 245);
     border: none;
     border-radius: 5px;
