--- a/frontend/src/Pages/Mathematik/Klasse1/addition-subtraktion.css
+++ b/frontend/src/Pages/Mathematik/Klasse1/addition-subtraktion.css
@@ -1,8 +1,8 @@
 .header {
-  background-color: #1274d5;
+  background-color: #76afe8;
   padding: 15px;
   text-align: center;
-  border-bottom: 1px solid #492394;
+  border-bottom: 1px solid #4e6ad1;
 }
 
 .transparent-image {
@@ -12,14 +12,14 @@
   width: 100%;
   height: auto;
   opacity: 0.1;
-  z-index: 2;
+  z-index: 5;
 }
 
 .introduction, .task {
-  background-color: #37d514;
+  background-color: #aaef9b;
   padding: 15px;
   margin: 5px 0;
-  border: 1px solid #17bc3d;
+  border: 1px solid #3fcb5f;
   border-radius: 4px;
 }
 
@@ -42,9 +42,9 @@
 }
 
 .image-card {
-  background-color: #5339e4;
+  background-color: #e3e1ef;
   padding: 10px;
-  border: 1px solid #5233b7;
+  border: 1px solid #d3cfdf;
   border-radius: 1px;
   text-align: center;
 }
