--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,11 +4,9 @@
 
 
 .light {
-    background-color: white;
-    color: black;
-  }
-  
-  .dark {
-    background-color: black;
-    color: white;
-  }
+  background-color: #ffffff; /* Light mode background color */
+}
+
+.dark {
+  background-color: #333333; /* Dark mode background color */
+}
