terraform ordne erstelen

--- a/frontend/src/Pages/Deutsch/Klasse1/Alphabeteinführung.css
+++ b/frontend/src/Pages/Deutsch/Klasse1/Alphabeteinführung.css
@@ -1,5 +1,5 @@
 .Alphabeteinführung-header {
-  background-color: #1410f4;
+  background-color: #7deed8;
   color: rgb(22, 21, 42);
   padding: 30px;
   text-align: center;
