--- a/frontend/src/Pages/Deutsch/Klasse1/Woertersaetze.css
+++ b/frontend/src/Pages/Deutsch/Klasse1/Woertersaetze.css
@@ -5,7 +5,7 @@
 
 /* Header */
 .Woertersaetze-header {
-  background-color: #3914f1;
+  background-color: #58ec76;
   color: #191a1e;
   padding: 20px 0;
   margin-bottom: 20px;
@@ -39,7 +39,7 @@ main {
 
 /* Wörtersätze Items */
 .word-item {
-  background-color: #1c3beb;
+  background-color: #8fe8a1;
   border: 1px solid #1e1d21;
   border-radius: 5px;
   padding: 10px;
