--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,9 +18,9 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: right;
-  justify-content: right;
-  font-size: calc(20px + 1vmim);
+  align-items: center;
+  justify-content: center;
+  font-size: calc(20px + 1vmin);
   color: white;
 }
 
@@ -28,42 +28,25 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.animate-fade-in {
+  animation: fade-in 1s ease-in-out;
 }
 
-.animate-fade-in {
-    animation: fade-in 1s ease-in-out;
-}
 @keyframes fade-in {
   from {
-      opacity: 0;
+    opacity: 0;
   }
   to {
-      opacity: 1;
+    opacity: 1;
   }
 }
-.App body.light {
+
+.light-theme {
   background-color: white;
   color: black;
 }
 
-.App body.dark {
-  background-color: black;
-  color: white;
-}
-
-.App header-light, .Appfooter-light, .App main-light {
-  background-color: white;
-  color: black;
-}
-
-.App header-dark, .App footer-dark, .App main-dark {
+.dark-theme {
   background-color: black;
   color: white;
 }
